// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProcessVariables component tests snapshot testing with variables 1`] = `
<div>
  <article
    class="pf-c-card"
    data-ouia-component-id="OUIA-Generated-Card-2"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__header"
    >
      <h3
        class="pf-c-title pf-m-xl"
        data-ouia-component-id="OUIA-Generated-Title-2"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Variables
      </h3>
      <span
        class="pf-c-label pf-m-orange"
      >
        <span
          class="pf-c-label__content"
        >
          <span
            class="pf-c-label__icon"
          />
           
          Changes are not saved yet
        </span>
      </span>
      <span
        class="pf-c-label pf-m-green kogito-process-details--variables__label-fadeIn"
      >
        <span
          class="pf-c-label__content"
        >
          <span
            class="pf-c-label__icon"
          />
           
          Changes are saved
        </span>
      </span>
    </div>
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-c-content"
      >
        <div />
      </div>
    </div>
  </article>
</div>
`;

exports[`ProcessVariables component tests snapshot testing without variables 1`] = `
<div>
  <article
    class="pf-c-card"
    data-ouia-component-id="OUIA-Generated-Card-1"
    data-ouia-component-type="PF4/Card"
    data-ouia-safe="true"
    id=""
  >
    <div
      class="pf-c-card__header"
    >
      <h3
        class="pf-c-title pf-m-xl"
        data-ouia-component-id="OUIA-Generated-Title-1"
        data-ouia-component-type="PF4/Title"
        data-ouia-safe="true"
      >
        Variables
      </h3>
      <span
        class="pf-c-label pf-m-green kogito-process-details--variables__label-fadeOut"
      >
        <span
          class="pf-c-label__content"
        >
          <span
            class="pf-c-label__icon"
          />
           
          Changes are saved
        </span>
      </span>
    </div>
    <div
      class="pf-c-card__body"
    >
      <div
        class="pf-c-content"
      >
        <div />
      </div>
    </div>
  </article>
</div>
`;
